k8s-traefik-ds.yaml

#----------  Deploy Traefik to a Cluster as Daemonset ---------- #
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
          hostPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
---
# ----------  Create Service ---------- #
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-ingress-service
#   namespace: kube-system
# spec:
#   selector:
#     k8s-app: traefik-ingress-lb
#   ports:
#     - protocol: TCP
#       port: 80
#       name: web
#     - protocol: TCP
#       port: 8080
#       name: admin
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-web-ui
#   namespace: kube-system
# spec:
#   selector:
#     k8s-app: traefik-ingress-lb
#   ports:
#   - name: web
#     port: 80
#     targetPort: 8080
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: traefik-web-ui
#   namespace: kube-system
#   annotations:
#     kubernetes.io/ingress.class: traefik
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /admin
#         backend:
#           serviceName: traefik-web-ui
#           servicePort: 80
#     # host: traefik-ui.minikube
