k8s-tomcat-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat-nodeport
  name: tomcat-nodeport
spec:
  externalTrafficPolicy: Cluster
  ports:
  # - name: 7681-7681
  #   port: 7681
  #   protocol: TCP
  #   targetPort: 7681
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 35555
  selector:
    app: demo-tomcat
  type: NodePort
