k8s-tomcat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-tomcat
  labels:
    app: demo-tomcat
spec:
  replicas: 6
  selector:
    matchLabels:
      app: demo-tomcat
  template:
    metadata:
      labels:
        app: demo-tomcat
    spec:
      containers:
      - name: demo-tomcat
        image: kubegrid/demo-tomcat
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-tomcat
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: demo-tomcat
