k8s-nginx-ingress.yaml
#---------- Create Namespace ---------- #
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress 
  
---
#----------  Deploy NGINX as a Daemonset ---------- #
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: nginx/nginx-ingress:edge
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
          hostPort: 8080
       #- name: prometheus
         #containerPort: 9113
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          - -nginx-status=true
          - -nginx-status-port=8080
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
         #- -enable-prometheus-metrics
         #- -enable-custom-resources
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-tomcat-ingress
  # namespace: kube-system
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  # backend:
  #   serviceName: demo-tomcat
  #   servicePort: 8080
  rules:
  - host: "*.xip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-tomcat
          servicePort: 8080
